--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">TickTacToe</string>
+    <string name="player_1_name">Player 1 Name</string>
+    <string name="player_2_name">Player 2 Name</string>
+    <string name="start">START</string>
+    <string name="history">History</string>
+    <string name="settings">Settings</string>
+    <string name="rules">Rules</string>
 </resources>
