--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="history">History</string>
     <string name="settings">Settings</string>
     <string name="rules">Rules</string>
+    <string name="home">Home</string>
 </resources>
