--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="settings">Settings</string>
     <string name="rules">Rules</string>
     <string name="home">Home</string>
+    <string name="restart">Restart</string>
+    <string name="stop">Stop</string>
 </resources>
