--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="player_o_name">Player O Name</string>
     <string name="start">START</string>
     <string name="history">History</string>
-    <string name="settings">Settings</string>
+    <string name="faq">FAQ</string>
     <string name="rules">Rules</string>
     <string name="home">Home</string>
     <string name="restart">Restart</string>
     <string name="stop">Stop</string>
+
 </resources>
